Revision history for Dist-Zilla-Role-ModuleIncluder

{{$NEXT}}
          Fix precedence issue in return … and …

0.002     2012-03-31 17:42:47 Europe/Amsterdam
          Added corpus/ to no_index

0.001     2012-03-31 17:07:36 Europe/Amsterdam
          Initial release