@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Role-ModuleIncluder
 
 {{$NEXT}}
           Fix precedence issue in return … and …
+          Don't rescan on increased module dependency
 
 0.002     2012-03-31 17:42:47 Europe/Amsterdam
           Added corpus/ to no_index
